# notify-me

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/notifier/: email_notifier.rs  mod.rs  wechat_notifier.rs
tests/: main.rs
